apps/local-ai/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-ai
  namespace: local-ai
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - localai.biplane.v6.rocks
    - localai.biplane.casa
  rules:
    - backendRefs:
        - name: local-ai
          port: 80
